[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "app_package_mcndoungerii"
version = "0.0.2"
authors = [
  { name="Allen Mwandunga", email="allenmcndounger@gmail.com" },
]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/mcndoungerii/pytest_refresher.git"
"Bug Tracker" = "https://github.com/mcndoungerii/pytest_refresher.git/issues"